--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "swr": "^2.2.4",
     "typescript": "^4.9.5",
     "undici": "^6.6.2",
     "web-vitals": "^2.1.4"
